# pit

./: .gitignore  LICENSE  README.md  commit-logic.md  main.py  pyproject.toml  todo.md
.pit/: HEAD  index
.pit/refs/heads/: master
notes/: add-logic.md  branch-checkout-logic.md  status-logic.md
pit/: __init__.py
